# superset-trie

./: .gitignore  .hlint.yaml  Benchmark.hs  CHANGELOG.md  Example.hs  Generators.hs  README.md  SupersetTrie.hs  Tests.hs  superset-trie.cabal  superset-trie.html
